BUG | Fix pinned bg paragraph text appears above main navigation drop down (#718)
BUG | Fix pinned bg paragraph text appears above main navigation drop down (#718)

--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/pinned-bg/_pinned-bg.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/components/pinned-bg/_pinned-bg.scss
@@ -151,7 +151,7 @@
             width: 100%;
             position: relative;
             pointer-events: none;
-            z-index: 100;
+            z-index: 99;
             will-change: transform, opacity;
             transform: translateZ(0);            /* create a new layer */
             backface-visibility: hidden;
